<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BB SMS</string>
    <string name="action_about">О приложении</string>
    <string name="app_descrip">Анализатор SMS Беларусбанка. Версия 0.9</string>
    <string name="app_credits">Handen Inc (c) 2018\nViber: +375 29 3190365\nemail: handeninc@gmail.com</string>
    <string name="action_all">Все платежи</string>
    <string name="action_grouped">Платежи по получателям</string>
    <string name="action_help">Помощь</string>
    <string name="help_intro">Данное приложение анализирует полученные вами SMS от \"Беларусбанка\" и составляет по ним отчёт.</string>
    <string name="help_text1">После запуска открывается первый экран, содержащий информацию о платежах в текущем месяце. Платежи сгруппированы по получателям. Выбрав любого получателя можно перейти на второй экран, содержащий детальную информацию о платежах данному получателю. После списка получателей информация выводится информация о приходе и расходах в текущем месяце.</string>
    <string name="help_text2">Второй экран.\nВ первой колонке -- время и дата совершения платежа (часы, минуты и день месяца). Треугольная кнопка внизу телефона возвращает на первый экран.</string>
    <string name="help_text3">Третий экран.\nПолная информация о платежах в текущем месяце. На этот экран можно попасть выбрав в списке графу \"расходы\" или нажав на название текущего месяца внизу экрана. Треугольная кнопка внизу телефона возвращает на первый экран.</string>
    <string name="help_coda">О всех предложениях и замечаниях пишите по адресу: handeninc@gmail.com</string>
    <string name="help_header">BB SMS. Описание.</string>
</resources>
